--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="app" style="height: 100svh;"></div>
-<script type="module" src="/main.ts"></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
